objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>BD Sales</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Agreement</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Home Management</fullName>
        <description>Home Management</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Considering Service</fullName>
        </values>
        <values>
            <fullName>Consultation</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Interested in Consulation</fullName>
        </values>
        <values>
            <fullName>Pitched</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inside Sales</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Owner_ID__c</fullName>
        <formula>Account.Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_owner_update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account owner update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempted__c</fullName>
        <label>Attempted</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bad__c</fullName>
        <label>Bad</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Maintenance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason_Detail__c</fullName>
        <label>Closed Lost Reason Detail</label>
        <picklist>
            <controllingField>Closed_Lost_Reason__c</controllingField>
            <picklistValues>
                <fullName>DIY Homeowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Existing Pros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Need Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HA Price Too High For Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Rates Uncompetitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investing in property not a priority</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Exhausted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Untargeted Pro Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD/Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrelated Business Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY Homeowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has Existing Pros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renting home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor experience with Porch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contacted_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contacted__c</fullName>
        <label>Contacted</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Passed_Close_Date__c</fullName>
        <description>Calculates the number of days delinquent an opportunity is.</description>
        <formula>if(
     AND( 
             OR(
                 ispickval(StageName, &apos;Close Won&apos;) = FALSE           
                ,ispickval(StageName, &apos;Close Lost&apos;) = FALSE
                )
         ,(TODAY() &gt; CloseDate)
        )
,TODAY() - CloseDate
,0
)</formula>
        <label>Days Passed Close Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>BackPorch Quote Discount</description>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effective_Monthly_Payment__c</fullName>
        <label>Effective Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gross_Amount__c</fullName>
        <description>Raw total of the subscription in BackPorch without any discounts</description>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditional Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancillary Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Owners Assn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Detail__c</fullName>
        <label>Other Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Stamp__c</fullName>
        <description>Stamps Opportunity with Record owner at the time of creation</description>
        <label>Owner Stamp</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepayment_Discount__c</fullName>
        <label>Prepayment Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Guaranteed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Payment__c</fullName>
        <label>Recurring Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Role_when_Created__c</fullName>
        <label>Role when Created</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <description>Subscription payment terms for home management</description>
        <inlineHelpText>Subscription payment terms</inlineHelpText>
        <label>Subscription Renewal Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Passed_Due_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>My Passed Due Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>WC_Follow_Up</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>greaterOrEqual</operation>
            <value>40</value>
        </filters>
        <label>WC Follow Up</label>
        <sharedTo>
            <role>Local_Market_Specialists_5</role>
            <role>Revenue_Manager_5</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>WC_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>equals</operation>
            <value>40</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.LAST_ACTIVITY</field>
            <operation>greaterThan</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <label>Uncontacted WCs</label>
        <sharedTo>
            <role>Local_Market_Specialists_5</role>
            <role>Revenue_Manager_5</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>BD_Sales</fullName>
        <active>true</active>
        <businessProcess>BD Sales</businessProcess>
        <label>BD Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>Home_Management</fullName>
        <active>true</active>
        <businessProcess>Home Management</businessProcess>
        <label>Home Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inside_Sales</fullName>
        <active>true</active>
        <businessProcess>Inside Sales</businessProcess>
        <label>Inside Sales</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Closed_Won_Require_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL( StageName , &quot;Closed Won&quot;),
 ISBLANK(Amount)
)</errorConditionFormula>
        <errorDisplayField>Amount</errorDisplayField>
        <errorMessage>Closed Won Opportunities must have an Amount. Please update this field. [01]</errorMessage>
    </validationRules>
</CustomObject>